# strix-llm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
strix_llm/: baseline.py  bench.py  checks.py  cli.py  presets.py  probe.py
tests/: test_baseline.py  test_bench.py  test_checks.py  test_presets.py  test_probe.py
